; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6_rtr.c_pfxrtr_add.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6_rtr.c_pfxrtr_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nd_prefix = type { i32, i32 }
%struct.nd_defrouter = type { i32 }
%struct.nd_pfxrouter = type { %struct.nd_defrouter* }

@nd6_mutex = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@ndprtr_zone = common dso_local global i32 0, align 4
@pfr_entry = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nd_prefix*, %struct.nd_defrouter*)* @pfxrtr_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pfxrtr_add(%struct.nd_prefix* %0, %struct.nd_defrouter* %1) #0 {
  %3 = alloca %struct.nd_prefix*, align 8
  %4 = alloca %struct.nd_defrouter*, align 8
  %5 = alloca %struct.nd_pfxrouter*, align 8
  store %struct.nd_prefix* %0, %struct.nd_prefix** %3, align 8
  store %struct.nd_defrouter* %1, %struct.nd_defrouter** %4, align 8
  %6 = load i32, i32* @nd6_mutex, align 4
  %7 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %8 = call i32 @LCK_MTX_ASSERT(i32 %6, i32 %7)
  %9 = load %struct.nd_prefix*, %struct.nd_prefix** %3, align 8
  %10 = call i32 @NDPR_LOCK_ASSERT_NOTHELD(%struct.nd_prefix* %9)
  %11 = load i32, i32* @ndprtr_zone, align 4
  %12 = call %struct.nd_pfxrouter* @zalloc(i32 %11)
  store %struct.nd_pfxrouter* %12, %struct.nd_pfxrouter** %5, align 8
  %13 = load %struct.nd_pfxrouter*, %struct.nd_pfxrouter** %5, align 8
  %14 = icmp eq %struct.nd_pfxrouter* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  br label %36

16:                                               ; preds = %2
  %17 = load %struct.nd_pfxrouter*, %struct.nd_pfxrouter** %5, align 8
  %18 = call i32 @bzero(%struct.nd_pfxrouter* %17, i32 8)
  %19 = load %struct.nd_defrouter*, %struct.nd_defrouter** %4, align 8
  %20 = load %struct.nd_pfxrouter*, %struct.nd_pfxrouter** %5, align 8
  %21 = getelementptr inbounds %struct.nd_pfxrouter, %struct.nd_pfxrouter* %20, i32 0, i32 0
  store %struct.nd_defrouter* %19, %struct.nd_defrouter** %21, align 8
  %22 = load %struct.nd_prefix*, %struct.nd_prefix** %3, align 8
  %23 = call i32 @NDPR_LOCK(%struct.nd_prefix* %22)
  %24 = load %struct.nd_prefix*, %struct.nd_prefix** %3, align 8
  %25 = getelementptr inbounds %struct.nd_prefix, %struct.nd_prefix* %24, i32 0, i32 1
  %26 = load %struct.nd_pfxrouter*, %struct.nd_pfxrouter** %5, align 8
  %27 = load i32, i32* @pfr_entry, align 4
  %28 = call i32 @LIST_INSERT_HEAD(i32* %25, %struct.nd_pfxrouter* %26, i32 %27)
  %29 = load %struct.nd_prefix*, %struct.nd_prefix** %3, align 8
  %30 = getelementptr inbounds %struct.nd_prefix, %struct.nd_prefix* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %30, align 4
  %33 = load %struct.nd_prefix*, %struct.nd_prefix** %3, align 8
  %34 = call i32 @NDPR_UNLOCK(%struct.nd_prefix* %33)
  %35 = call i32 (...) @pfxlist_onlink_check()
  br label %36

36:                                               ; preds = %16, %15
  ret void
}

declare dso_local i32 @LCK_MTX_ASSERT(i32, i32) #1

declare dso_local i32 @NDPR_LOCK_ASSERT_NOTHELD(%struct.nd_prefix*) #1

declare dso_local %struct.nd_pfxrouter* @zalloc(i32) #1

declare dso_local i32 @bzero(%struct.nd_pfxrouter*, i32) #1

declare dso_local i32 @NDPR_LOCK(%struct.nd_prefix*) #1

declare dso_local i32 @LIST_INSERT_HEAD(i32*, %struct.nd_pfxrouter*, i32) #1

declare dso_local i32 @NDPR_UNLOCK(%struct.nd_prefix*) #1

declare dso_local i32 @pfxlist_onlink_check(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
